--- a/src/components/brand/Brand.css
+++ b/src/components/brand/Brand.css
@@ -12,7 +12,6 @@
 
 .brand-image {
   margin-bottom: 30px;
-  transform: translateX(-20px);
   width: 300px;
   height: auto;
 }
@@ -22,9 +21,9 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 29px;
+  text-align: center;
   max-width: 250px;
-  text-align: left;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 10px;
 }
 
@@ -33,7 +32,8 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
+  max-width: 250px;
   letter-spacing: 1.6px;
-  margin: 0;
+  margin: 0 auto;
   text-transform: uppercase;
 }
