--- a/src/components/brand/Brand.css
+++ b/src/components/brand/Brand.css
@@ -2,18 +2,35 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  cursor: pointer;
+  border-radius: 0.5rem;
   transition: 0.2s;
+  cursor: grab;
+  padding: 1rem;
 }
 
 .brand:hover {
   scale: 1.1;
 }
 
+.brand.active {
+  color: #FEFBF1;
+  background: #703412;
+}
+
 .brand-image {
-  margin-bottom: 30px;
-  width: 300px;
+  margin-bottom: 20px;
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  width: 100%;
   height: auto;
+  border-radius: inherit;
+  cursor: inherit;
+  min-height: 280px;
+  max-width: 280px;
 }
 
 .brand-title {
@@ -22,7 +39,8 @@
   font-size: 24px;
   line-height: 29px;
   text-align: center;
-  max-width: 250px;
+  max-width: 280px;
+  cursor: inherit;
   margin: 0 auto;
   margin-bottom: 10px;
 }
@@ -31,8 +49,9 @@
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
+  cursor: inherit;
   line-height: 18px;
-  max-width: 250px;
+  max-width: 280px;
   letter-spacing: 1.6px;
   margin: 0 auto;
   text-transform: uppercase;
