--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,6 +5,7 @@
 .header-inner {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 300px;
   margin: 0 auto;
 }
@@ -24,4 +25,20 @@
 
 .header-link:hover {
   text-decoration: underline;
+}
+
+.header-button {
+  background: #703412;
+  color: #FEFBF1;
+  border: none;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.3rem;
+  margin-left: 1rem;
+  text-transform: capitalize;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.header-button:hover {
+  background: #b0633c;
 }
