LESSON-8 fix. color text mode

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@
   text-align: center;
 }
 
+.App.active .brand-subtitle, .brand-title{
+  color: #703412;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
